# pekora-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/aws/: ec2.rs  elasticache.rs  mod.rs  price_bulk.rs  price_bulk_types.rs  types.rs  util.rs
src/cache/: file_backed.rs  mod.rs  types.rs
src/transform/aws/: mod.rs  savings_plan.rs
src/util/: mod.rs  regex.rs  set.rs
